# 1195-25-HTL3R-sem1

./: .gitignore  README.md  flake.nix  pyproject.toml
01_Junit/src/firsttry/: Count.java  CountTest.java
02_Enum/: .gitattributes
02_Enum/src/secondtry/: WordCount.java  WordCountTests.java  secondtry.mmd
02_Enum/src/wordcount/: WordCount.java  WordCountTests.java
03_CSV/resources/: adjacency.csv
03_CSV/src/csv/: CSVFileReader.java  CSVFileReaderTest.java  CSVReader.java  CSVReader.mmd  CSVReaderTest.java
04_py/D1_palindrome/: palindrome.py
04_py/D2_collatz/: collatz.py
04_py/D3_rekursiv/: rekursiv.py
05_kaiski/: caesar.py  vigenere.py
05_kasiski/: caesar.py  kasiski.py  text.txt  vigenere.py
06_py_adminscripting/: copy-dcim.py  find_files_by_ext.py  get_path_components.py  pinglawine.py
