[tool.poetry]
name = "2425-4cn-1195-sew4"
version = "0.1.0"
description = "Software development in 4th year at HTL3R (Python)"
authors = ["Karun Sandhu <129101708+MrSom3body@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
