[tool.poetry]
name = "1195-25-HTL3R-sem1"
version = "0.1.0"
description = "Software development in 4th year at HTL3R"
authors = ["Karun Sandhu <129101708+MrSom3body@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
